--- a/README
+++ b/README
@@ -1,13 +1,1 @@
-This project contains the source files for the impress.js tutorial available here:  
-http://www.cubewebsites.com/blog/guides/how-to-use-impress-js/
-
- <! DOCTYPE html>
- <Html>
- <Head>
- <Title> Impress Tutorial </ title>
- <Meta http-equiv = "Content-Type" content = "text / html; charset = UTF-8">
- </ Head>
- <Body>
-
- </ Body>
- </ Html> 
+This demo was purely intended to try out what we learned..
